--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="logo_ml" href="../public/logo_ml.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
